# PyPSID

./: .gitattributes  ChangeLog.md  LICENSE.md  README.md  pyproject.toml  requirements.txt  setup.py
.github/workflows/: publish-to-pypi.yml
source/: PSID_example.py  setup.py
source/PSID/: IPSID.py  LSSM.py  MatHelper.py  PSID.py  PSIDModel.py  PrepModel.py  ReducedRankRegressor.py  __init__.py  evaluation.py  mode_tools.py  sim_tools.py  tools.py
source/PSID/example/: IPSID_example.py  IPSID_tutorial.ipynb  PSID_example.py  PSID_tutorial.ipynb  sample_model_IPSID.mat  sample_model_IPSID_add_step.mat
source/PSID/tests/: test_IPSID.py  test_LSSM.py  test_PSID.py  test_PSIDModel.py  test_PrepModel.py
source/example/: sample_data.mat  sample_model.mat
