[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "PSID"
version = "1.2.2"
authors = [
    {name = "Omid Sani", email = "omidsani@gmail.com"},
]
description = "Python implementation for preferential subspace identification (PSID)"
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
dependencies = [
    "numpy",
    "scipy",
    "scikit-learn",
    "matplotlib",
    "h5py"
]
dynamic = ["readme"]

[tool.setuptools.dynamic]
readme = {file = ["README.md"], content-type = "text/markdown"}

[tool.setuptools.packages.find]
where = ["source"]  # list of folders that contain the packages (["."] by default)